@@ -40,9 +40,11 @@ with System.Garlic.Protocols;
 with System.Garlic.Termination;
 with System.Garlic.Utils;
 
-with System.Garlic.Debug;    use System.Garlic.Debug;
-with System.Garlic.Filters;  use System.Garlic.Filters;
-with System.Garlic.Trace;    use System.Garlic.Trace;
+with System.Garlic.Debug;     use System.Garlic.Debug;
+with System.Garlic.Filters;   use System.Garlic.Filters;
+with System.Garlic.Trace;     use System.Garlic.Trace;
+
+with System.Standard_Library;
 
 package body System.Garlic.Heart is
 
@@ -1136,6 +1138,9 @@ package body System.Garlic.Heart is
    procedure Set_My_Partition_ID (Partition : in Partition_ID) is
       use System.Garlic.Trace;
    begin
+
+      System.Standard_Library.Local_Partition_ID := Natural (Partition);
+
       Local_Partition_ID.Set (Partition);
 
       if Options.Execution_Mode = Trace_Mode then
